Fix some map bugs
- Move JS to separate file
- No more overlapping the menu
- Icons now unselect when new ones are selected

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -2,6 +2,8 @@
 @use '../vars';
 
 nav {
+  z-index: 2;
+
   ul {
     margin: 0;
     padding: 0;
